[project]
name = "prompt-improver"
version = "0.1.0"
description = ""
authors = [
    {name = "Christoph Diehl",email = "1614333+posidron@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
